# minitube-backend

./: .gitignore  LICENSE  Makefile  README.md  vars.mk
api/: openapi.yml
docs/: index.html
lambdas/: README.md
lambdas/endpoint/: Cargo.toml  Dockerfile  Makefile  openapi.yml
lambdas/endpoint/src/: error.rs  main.rs  routes.rs  utils.rs
lambdas/generate-preview/: Dockerfile  Makefile  main.py
lambdas/generate-thumbnail/: Dockerfile  Makefile  main.py
lambdas/generate-thumbnails/: main.py
lambdas/label-thumbnail/: .dockerignore  Cargo.toml  Dockerfile  Makefile
lambdas/label-thumbnail/src/: data.rs  main.rs
lambdas/search-labels/: Cargo.toml  Dockerfile  Makefile
lambdas/search-labels/src/: data.rs  main.rs
scripts/: download.sh  zip.sh
terraform/: dynamodb.tf  endpoint.tf  gateway.tf  iam.tf  lambda.tf  s3.tf
