[package]
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"
name = "endpoint"
version = "0.1.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
base64 = "0.13.0"
chrono = "0.4.19"
common_macros = "0.1.1"
dotenv = "0.15.0"
fern = "0.6.0"
log = "0.4.11"
multipart = {version = "0.17.0", default-features = false, features = ["server"]}
nanoid = "0.3.0"
netlify_lambda = "0.1.3"
netlify_lambda_http = "0.1.2"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
rusoto_lambda = "0.45.0"
rusoto_s3 = "0.45.0"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
thiserror = "1.0.22"
tokio = {version = "0.2", features = ["rt-core", "macros"]}

[dev-dependencies]
common_macros = "0.1.1"
