[package]
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"
name = "endpoint"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
nanoid = "0.3.0"
netlify_lambda_http = "0.1.2"
rusoto_core = "0.45.0"
rusoto_credential = "0.45.0"
rusoto_lambda = "0.45.0"
rusoto_s3 = "0.45.0"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
thiserror = "1.0.22"
tokio = {version = "0.2", features = ["rt-core", "macros"]}
