[package]
name = "label-thumbnail"
version = "0.1.0"
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
rusoto_core = "0.45.0"
rusoto_rekognition = "0.45.0"
