[package]
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"
name = "label-thumbnail"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
netlify_lambda = "0.1.3"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
rusoto_rekognition = "0.45.0"
serde = {version = "1.0.118", features = ["derive"]}
tokio = "0.2"

[dev-dependencies]
anyhow = "1.0.36"
serde_json = "1.0.60"
