[package]
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"
name = "search-labels"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_macros = "0.1.1"
netlify_lambda = "0.1.3"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
tokio = "0.2"
